--- a/src/main/resources/templates/products-vn/asrs-vn.html
+++ b/src/main/resources/templates/products-vn/asrs-vn.html
@@ -14,14 +14,10 @@
     <h1>Kệ trữ hàng dạng lưu trữ và truy hồi tự động</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/asrs/asrs.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/asrs/asrs7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/ASRS/ASRS.JPG" alt=""></div>
+        <div class="single-img"><img src="img/ASRS/ASRS1.JPG" alt=""></div>
+        <div class="single-img"><img src="img/ASRS/ASRS2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/ASRS/ASRS3.JPG" alt=""></div>
     </div>
 </div>
 
