--- a/src/main/resources/templates/products-vn/boltless-vn.html
+++ b/src/main/resources/templates/products-vn/boltless-vn.html
@@ -16,12 +16,10 @@
     <div class="img-area">
         <div class="single-img"><img src="img/boltless/boltless.jpg" alt=""></div>
         <div class="single-img"><img src="img/boltless/boltless1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/boltless/boltless7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/boltless/boltless2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/boltless/boltless3.JPG" alt=""></div>
+        <div class="single-img"><img src="img/boltless/boltless4.JPG" alt=""></div>
+        <div class="single-img"><img src="img/boltless/boltless5.JPG" alt=""></div>
     </div>
 </div>
 
