--- a/src/main/resources/templates/products-vn/doubledeep-vn.html
+++ b/src/main/resources/templates/products-vn/doubledeep-vn.html
@@ -14,14 +14,8 @@
     <h1>Kệ trữ hàng dạng ba lết đôi</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/doubledeep/doubledeep.jpg" alt=""></div>
+        <div class="single-img"><img src="img/doubledeep/doubledeep.JPG" alt=""></div>
         <div class="single-img"><img src="img/doubledeep/doubledeep1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/doubledeep/doubledeep7.jpg" alt=""></div>
     </div>
 </div>
 
