--- a/src/main/resources/templates/products-vn/mezzanine-vn.html
+++ b/src/main/resources/templates/products-vn/mezzanine-vn.html
@@ -14,14 +14,14 @@
     <h1>Kệ trữ hàng dạng nhiều tầng</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/mezzanine/mezzanine.jpg" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine.JPG" alt=""></div>
         <div class="single-img"><img src="img/mezzanine/mezzanine1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mezzanine/mezzanine2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mezzanine/mezzanine3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mezzanine/mezzanine4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mezzanine/mezzanine5.jpg" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine3.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine4.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine5.JPG" alt=""></div>
         <div class="single-img"><img src="img/mezzanine/mezzanine6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mezzanine/mezzanine7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/mezzanine/mezzanine7.JPG" alt=""></div>
     </div>
 </div>
 
