--- a/src/main/resources/templates/products-vn/mobile-vn.html
+++ b/src/main/resources/templates/products-vn/mobile-vn.html
@@ -14,14 +14,10 @@
     <h1>Kệ trữ hàng dạng di động</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/mobile/mobile.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobile/mobile7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/mobile/mobile.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mobile/mobile1.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mobile/mobile2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mobile/mobile3.JPG" alt=""></div>
     </div>
 </div>
 
