--- a/src/main/resources/templates/products-vn/pushback-vn.html
+++ b/src/main/resources/templates/products-vn/pushback-vn.html
@@ -14,14 +14,10 @@
     <h1>Kệ trữ hàng dạng đẩy từ phía sau</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/pushback/pushback.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback2.jpg" alt=""></div>
+        <div class="single-img"><img src="img/pushback/pushback.JPG" alt=""></div>
+        <div class="single-img"><img src="img/pushback/pushback1.JPG" alt=""></div>
+        <div class="single-img"><img src="img/pushback/pushback2.JPG" alt=""></div>
         <div class="single-img"><img src="img/pushback/pushback3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/pushback/pushback7.jpg" alt=""></div>
     </div>
 </div>
 
