--- a/src/main/resources/templates/products/cantilever.html
+++ b/src/main/resources/templates/products/cantilever.html
@@ -14,14 +14,13 @@
     <h1>Cantilever Racking Systems</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/cantilever/cantilever.jpg" alt=""></div>
-        <div class="single-img"><img src="img/cantilever/cantilever1.jpg" alt=""></div>
+        <div class="single-img"><img src="img/cantilever/cantilever.JPG" alt=""></div>
+        <div class="single-img"><img src="img/cantilever/cantilever1.JPG" alt=""></div>
         <div class="single-img"><img src="img/cantilever/cantilever2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/cantilever/cantilever3.jpg" alt=""></div>
+        <div class="single-img"><img src="img/cantilever/cantilever3.JPG" alt=""></div>
         <div class="single-img"><img src="img/cantilever/cantilever4.jpg" alt=""></div>
         <div class="single-img"><img src="img/cantilever/cantilever5.jpg" alt=""></div>
         <div class="single-img"><img src="img/cantilever/cantilever6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/cantilever/cantilever7.jpg" alt=""></div>
     </div>
 </div>
 
