--- a/src/main/resources/templates/products/drivein.html
+++ b/src/main/resources/templates/products/drivein.html
@@ -14,14 +14,14 @@
     <h1>Drive-in Racking Systems</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/drivein/drivein.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/drivein/drivein7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein1.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein3.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein4.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein5.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein6.JPG" alt=""></div>
+        <div class="single-img"><img src="img/drivein/drivein7.JPG" alt=""></div>
     </div>
 </div>
 
