--- a/src/main/resources/templates/products/platform.html
+++ b/src/main/resources/templates/products/platform.html
@@ -14,14 +14,10 @@
     <h1>Platform</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/platform/platform.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/platform/platform7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/platform/platform.JPG" alt=""></div>
+        <div class="single-img"><img src="img/platform/platform1.JPG" alt=""></div>
+        <div class="single-img"><img src="img/platform/platform2.JPG" alt=""></div>
+        <div class="single-img"><img src="img/platform/platform3.JPG" alt=""></div>
     </div>
 </div>
 
