--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -71,7 +71,7 @@ button:hover, button:focus{
   }
 
   #item_mobileshelving{
-    background-image: url("../img/mobileshelving/mobileshelving.JPG");
+    background-image: url("../img/mobileshelving/mobileshelving.jpg");
   }
 
 #item_mezzanine{
