--- a/src/main/resources/static/css/website.css
+++ b/src/main/resources/static/css/website.css
@@ -66,11 +66,11 @@ a:link, a:visited{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-image: url("../img/home.jpg");
     color: black;
     min-height: 387px;
     background-attachment: fixed;
     background-position: center;
+    background-image: url("../img/home.png");
     background-repeat: no-repeat;
     background-size: cover;
     align-self: center;
