--- a/src/main/resources/templates/products-vn/livestorage-vn.html
+++ b/src/main/resources/templates/products-vn/livestorage-vn.html
@@ -14,8 +14,7 @@
     <h1>Kệ trữ hàng có ba lết dạng trượt</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/livestorage/livestorage.jpg" alt=""></div>
-        <div class="single-img"><img src="img/livestorage/livestorage2.jpg" alt=""></div>
+        <div class="single-img"><img src="img/livestorage/livestorage.JPG" alt=""></div>
     </div>
 </div>
 
