--- a/src/main/resources/templates/products/mobileshelving.html
+++ b/src/main/resources/templates/products/mobileshelving.html
@@ -17,11 +17,7 @@
         <div class="single-img"><img src="img/mobileshelving/mobileshelving.jpg" alt=""></div>
         <div class="single-img"><img src="img/mobileshelving/mobileshelving1.jpg" alt=""></div>
         <div class="single-img"><img src="img/mobileshelving/mobileshelving2.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/mobileshelving/mobileshelving3.JPG" alt=""></div>
     </div>
 </div>
 
