--- a/src/main/resources/templates/products/selective.html
+++ b/src/main/resources/templates/products/selective.html
@@ -16,12 +16,12 @@
     <div class="img-area">
         <div class="single-img"><img src="img/selective/selective.jpg" alt=""></div>
         <div class="single-img"><img src="img/selective/selective1.jpg" alt=""></div>
-        <div class="single-img"><img src="img/selective/selective2.jpg" alt=""></div>
+        <div class="single-img"><img src="img/selective/selective2.JPG" alt=""></div>
         <div class="single-img"><img src="img/selective/selective3.jpg" alt=""></div>
-        <div class="single-img"><img src="img/selective/selective4.jpg" alt=""></div>
-        <div class="single-img"><img src="img/selective/selective5.jpg" alt=""></div>
-        <div class="single-img"><img src="img/selective/selective6.jpg" alt=""></div>
-        <div class="single-img"><img src="img/selective/selective7.jpg" alt=""></div>
+        <div class="single-img"><img src="img/selective/selective4.JPG" alt=""></div>
+        <div class="single-img"><img src="img/selective/selective5.JPG" alt=""></div>
+        <div class="single-img"><img src="img/selective/selective6.JPG" alt=""></div>
+        <div class="single-img"><img src="img/selective/selective7.JPG" alt=""></div>
     </div>
 </div>
 
