--- a/src/main/resources/templates/en/index-en.html
+++ b/src/main/resources/templates/en/index-en.html
@@ -12,7 +12,8 @@
   <section id="home">
     <div class="quote">
       <h1>J&F Industries International Co., Ltd</h1><br>
-      <p>Our company designs, manufactures and installs all types of racks for warehouses, hypermarkets. <a id="a1">Want to see more of our products?</a></p>
+      <p>Our company designs, manufactures and installs all types of racks for warehouses, hypermarkets. <br>
+        <a id="a1">Want to see more of our products?</a></p>
       <br><a href="products-en"><button type="submit"id="seemore">See More</button></a>
     </div>
  </section>
