--- a/src/main/resources/static/css/website.css
+++ b/src/main/resources/static/css/website.css
@@ -64,10 +64,11 @@ a:link, a:visited{
 
 #home{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     color: black;
-    min-height: 387px;
+    height: 100%;
+    /*min-height: 387px;*/
     background-attachment: fixed;
     background-position: center;
     background-image: url("../img/home.png");
@@ -111,9 +112,11 @@ footer{
 }
 
 iframe{
+  display: flex;
   height: 400px;
-  width: 1263px;
-  align-content: center;
+  width: 100%;
+  /*flex-flow: wrap;*/
+  /*justify-content: space-around;*/
 }
 
 #company li{
@@ -180,8 +183,10 @@ iframe{
 .quote{
   display: flex;
   flex-direction:column;
-  width: 500px;
-  height: 150px;
+  width: auto;
+  /*width: 500px;*/
+  /*height: 150px;*/
+  height: auto;
   align-self: center;
   text-align: center;
   background-color: white;
@@ -189,6 +194,7 @@ iframe{
   border-radius: 5px;
   position: relative;
   padding: 30px;
+  margin: 120px;
 }
 
 .quote h1, .quote p{
