watermarks added for images

--- a/src/main/resources/static/css/products.css
+++ b/src/main/resources/static/css/products.css
@@ -56,7 +56,7 @@ button:hover, button:focus{
   }
 
   #item_doubledeep{
-    background-image: url("../img/doubledeep/doubledeep.JPG");
+    background-image: url("../img/doubledeep/doubledeep1.jpg");
   }
 
   #item_asrs{
