--- a/src/main/resources/templates/products-vn/doubledeep-vn.html
+++ b/src/main/resources/templates/products-vn/doubledeep-vn.html
@@ -14,7 +14,7 @@
     <h1>Kệ trữ hàng dạng ba lết đôi</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/doubledeep/doubledeep.JPG" alt=""></div>
+<!--        <div class="single-img"><img src="img/doubledeep/doubledeep.JPG" alt=""></div>-->
         <div class="single-img"><img src="img/doubledeep/doubledeep1.jpg" alt=""></div>
     </div>
 </div>
