--- a/src/main/resources/templates/products-vn/mobileshelving-vn.html
+++ b/src/main/resources/templates/products-vn/mobileshelving-vn.html
@@ -14,7 +14,7 @@
     <h1>Tủ di động</h1>
 
     <div class="img-area">
-        <div class="single-img"><img src="img/mobileshelving/mobileshelving.JPG" alt=""></div>
+        <div class="single-img"><img src="img/mobileshelving/mobileshelving.jpg" alt=""></div>
         <div class="single-img"><img src="img/mobileshelving/mobileshelving1.jpg" alt=""></div>
         <div class="single-img"><img src="img/mobileshelving/mobileshelving2.jpg" alt=""></div>
         <div class="single-img"><img src="img/mobileshelving/mobileshelving3.JPG" alt=""></div>
