--- a/src/main/resources/templates/vn/about-vn.html
+++ b/src/main/resources/templates/vn/about-vn.html
@@ -11,7 +11,7 @@
 <link th:replace="fragments/fragment-vn :: header">
 
 <section id="about">
-  <img src="img/about.JPEG">
+  <img src="img/about.jpg">
 
   <div id="about-content">
     <h4>CÔNG TY TNHH QUỐC TẾ J&F ĐƯỢC THÀNH LẬP VÀO NĂM 2008 <br>
