--- a/src/main/resources/templates/en/about-en.html
+++ b/src/main/resources/templates/en/about-en.html
@@ -11,7 +11,7 @@
 <link th:replace="fragments/fragment-en :: header">
 
 <section id="about">
-  <img src="img/about.JPEG">
+  <img src="img/about.jpg">
 
   <div id="about-content">
     <h4>J&F INDUSTRIES INTERNATIONAL CO., LTD WAS ESTABLISHED IN 2008 <br>
