--- a/src/main/resources/templates/en/index-en.html
+++ b/src/main/resources/templates/en/index-en.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-en :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
+  <meta name="jfrack" content="J&F, J&F Industries International Co., Ltd, J&F racking system, warehouse rack, jfrack" />
 </head>
 
 <body>
