--- a/src/main/resources/templates/vn/index-vn.html
+++ b/src/main/resources/templates/vn/index-vn.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-vn :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
+  <meta name="jfrack" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, jfrack" />
 </head>
 
 <body>
