fixed meta names

--- a/src/main/resources/templates/en/index-en.html
+++ b/src/main/resources/templates/en/index-en.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <title>Home</title>
-  <meta name="keywords" content="J&F, J&F Industries International Co., Ltd, J&F racking system, warehouse rack, jfrack" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="J&F, jfrack" />
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-en :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
