--- a/src/main/resources/templates/vn/index-vn.html
+++ b/src/main/resources/templates/vn/index-vn.html
@@ -3,7 +3,7 @@
 <head>
 <title>Trang chủ</title>
   <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, jfrack" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-vn :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
