added google verifications

--- a/src/main/resources/templates/en/index-en.html
+++ b/src/main/resources/templates/en/index-en.html
@@ -3,6 +3,7 @@
 <head>
 <title>Home</title>
   <meta name="keywords" content="J&F, jfrack" />
+  <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-en :: style-css">
