--- a/src/main/resources/templates/vn/index-vn.html
+++ b/src/main/resources/templates/vn/index-vn.html
@@ -3,6 +3,7 @@
 <head>
 <title>Trang chủ</title>
   <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, jfrack" />
+  <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <link rel="icon" type="image/x-icon" href="/img/logo.png">
   <link th:replace="fragments/fragment-vn :: style-css">
