added google favicons and keywords to all the sites

--- a/src/main/resources/templates/products-vn/asrs-vn.html
+++ b/src/main/resources/templates/products-vn/asrs-vn.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Kệ trữ hàng dạng lưu trữ và truy hồi tự động</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack, sản phẩm,
+lưu trữ và truy hồi tự động, AS/RS" />
+    <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+    <link rel="icon" type="image/png" href="/img/logo.png" />
     <link th:replace="fragments/fragment-vn :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
