--- a/src/main/resources/templates/products/boltless.html
+++ b/src/main/resources/templates/products/boltless.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Boltless Angle Racking Systems</title>
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <meta name="keywords" content="J&F, jfrack, J&F Industries International Co., Ltd, Racking Systems,
+  Warehouse Racking Systems, Boltless Angle" />
+    <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+    <link rel="icon" type="image/png" href="/img/logo.png" />
     <link th:replace="fragments/fragment-en :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
 </head>
