--- a/src/main/resources/templates/en/contact-en.html
+++ b/src/main/resources/templates/en/contact-en.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
 <title>Contact</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo.png">
+  <meta name="keywords" content="J&F, jfrack, rack, J&F Industries International Co., Ltd, Racking Systems,
+  Warehouse Racking Systems" />
+  <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+  <link rel="icon" type="image/png" href="/img/logo.png" />
   <link th:replace="fragments/fragment-en :: style-css">
   <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
