--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -2,7 +2,9 @@
 <html lang="vi">
 <head>
 <title>Liên hệ</title>
-  <link rel="icon" type="image/x-icon" href="/img/logo.png">
+  <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack" />
+  <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+  <link rel="icon" type="image/png" href="/img/logo.png" />
   <link th:replace="fragments/fragment-vn :: style-css">
   <link rel="stylesheet" th:href="@{/css/website.css}">
 </head>
