--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -13,6 +13,7 @@
     <div class='nav' id="lang">
         <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">English</a></li>
         <li><a href="home-vn"><img src="img/vietnamese.png" alt="vn-flag" class="lang-logo" id="vn-logo">Vietnamese</a></li>
+        <li><a href="home-zh"><img src="img/taiwanese.png" alt="tw-flag" class="lang-logo" id="tw-logo">Traditional Chinese</a></li>
     </div>
     </header>
 
