finished adding all the product pages in chinese

--- a/src/main/resources/templates/zh/products-zh.html
+++ b/src/main/resources/templates/zh/products-zh.html
@@ -15,43 +15,43 @@
 <section class="products">
   <div>
     <ul class = "items">
-      <a href="selective-vn">
+      <a href="selective-zh">
         <button id="item_selective">可調式貨架</button>
       </a><br>
-      <a href="drivein-vn"><button id="item_drivein">駛入式貨架</button>
+      <a href="drivein-zh"><button id="item_drivein">駛入式貨架</button>
       </a><br>
-      <a href="narrowaisle-vn"><button id="item_narrowaisle">窄巷道料架</button>
+      <a href="narrowaisle-zh"><button id="item_narrowaisle">窄巷道料架</button>
       </a><br>
-      <a href="pushback-vn">
+      <a href="pushback-zh">
         <button id="item_pushback">後推式料架</button>
       </a><br>
-      <a href="livestorage-vn">
+      <a href="livestorage-zh">
         <button id="item_livestorage">滾輪式貨架</button>
       </a><br>
-      <a href="shuttle-vn"><button id="item_shuttle">穿梭式貨架</button>
+      <a href="shuttle-zh"><button id="item_shuttle">穿梭式貨架</button>
       </a><br>
-      <a href="doubledeep-vn">
+      <a href="doubledeep-zh">
         <button id="item_doubledeep">兩版深料架</button>
       </a><br>
-      <a href="asrs-vn">
+      <a href="asrs-zh">
         <button id="item_asrs">自動倉儲貨架</button>
       </a><br>
-      <a href="cantilever-vn">
+      <a href="cantilever-zh">
         <button id="item_cantilever">懸臂架</button>
       </a><br>
-      <a href="mobile-vn">
+      <a href="mobile-zh">
         <button id="item_mobile">重型移動架</button>
       </a><br>
-      <a href="mezzanine-vn">
+      <a href="mezzanine-zh">
         <button id="item_mezzanine">積層架</button>
       </a><br>
-      <a href="platform-vn">
+      <a href="platform-zh">
         <button id="item_platform">中二樓</button>
       </a><br>
-      <a href="boltless-vn">
+      <a href="boltless-zh">
         <button id="item_boltless">免螺絲角鋼架</button>
       </a><br>
-      <a href="mobileshelving-vn">
+      <a href="mobileshelving-zh">
         <button id="item_mobileshelving">移動櫃</button>
       </a><br>
       </ul>
