fixed spelling mistakes

--- a/src/main/resources/templates/fragments/fragment-zh.html
+++ b/src/main/resources/templates/fragments/fragment-zh.html
@@ -31,7 +31,7 @@
                     <li><a href="pushback-zh">後推式料架</a></li>
                     <li><a href="livestorage-zh">滾輪式貨架</a></li>
                     <li><a href="shuttle-zh">穿梭式貨架</a></li>
-                    <li><a href="doubledeep-zh">兩版深料架</a></li>
+                    <li><a href="doubledeep-zh">兩板深料架</a></li>
                     <li><a href="asrs-zh">自動倉儲貨架</a></li>
                     <li><a href="cantilever-zh">懸臂架</a></li>
                     <li><a href="mobile-zh">重型移動架</a></li>
