--- a/src/main/resources/templates/products-zh/doubledeep-zh.html
+++ b/src/main/resources/templates/products-zh/doubledeep-zh.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>兩版深料架</title>
+    <title>兩板深料架</title>
     <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack, sản phẩm,
 ba lết đôi, double deep" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
@@ -14,7 +14,7 @@ ba lết đôi, double deep" />
 <link th:replace="fragments/fragment-zh :: header">
 
 <div class="wrapper">
-    <h1>兩版深料架</h1>
+    <h1>兩板深料架</h1>
 
     <div class="img-area">
 <!--        <div class="single-img"><img src="img/doubledeep/doubledeep.JPG" alt=""></div>-->
