fixed spelling mistake 2

--- a/src/main/resources/templates/zh/products-zh.html
+++ b/src/main/resources/templates/zh/products-zh.html
@@ -31,7 +31,7 @@
       <a href="shuttle-zh"><button id="item_shuttle">穿梭式貨架</button>
       </a><br>
       <a href="doubledeep-zh">
-        <button id="item_doubledeep">兩版深料架</button>
+        <button id="item_doubledeep">兩板深料架</button>
       </a><br>
       <a href="asrs-zh">
         <button id="item_asrs">自動倉儲貨架</button>
