added viewport for all the pages

--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -8,7 +8,7 @@
     <header>
     <div id="name">
         <a href="/"><img src="img/logo.png" alt="logo" id="logo"></a>
-        <h2>J&F Industries International Co., Ltd</h2>
+        <h2><a href="/">J&F Industries International Co., Ltd</a></h2>
     </div>
     <div class='nav' id="lang">
         <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">English</a></li>
@@ -61,7 +61,7 @@
     <div class="footer">
         <h3>Address</h3>
         <p>
-            Address: C2-18, Da Den Industrial Zone, <br>Phu Tan Ward, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam
+            C2-18, Da Den Industrial Zone, <br>Phu Tan Ward, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam
         </p>
     </div>
 
