--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -8,7 +8,7 @@
     <header>
     <div id="name">
         <a href="home-vn"><img src="img/logo.png" alt="logo" id="logo"></a>
-        <h2>CÔNG TY TNHH QUỐC TẾ J&F</h2>
+        <h2><a href="home-vn">CÔNG TY TNHH QUỐC TẾ J&F</a></h2>
     </div>
     <div class='nav' id="lang">
         <li><a href="home-en"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">Tiếng Anh</a></li>
@@ -60,12 +60,12 @@
     <div class="footer">
         <h3>Địa chỉ</h3>
         <p>
-            Địa chỉ: Lô C2-18, KCN Đại Đăng,<br> Phường Phú Tân, Thành Phố Thủ Dầu Một, <br>Tỉnh Bình Dương, Việt Nam
+            Lô C2-18, KCN Đại Đăng,<br> P.Phú Tân, TP.Thủ Dầu Một, <br>T.Bình Dương, Việt Nam
         </p>
     </div>
 
     <div class ="footer" id="company">
-        <h3>Công ty chúng tôi</h3><br>
+        <h3>Công ty</h3><br>
         <li><a href="about-vn">Giới thiệu</a></li><br>
         <li><a href="products-vn">Sản phẩm</a></li><br>
         <li><a href="contact-vn">Liên hệ</a></li>
