--- a/src/main/resources/templates/fragments/fragment-zh.html
+++ b/src/main/resources/templates/fragments/fragment-zh.html
@@ -8,7 +8,7 @@
     <header>
     <div id="name">
         <a href="home-zh"><img src="img/logo.png" alt="logo" id="logo"></a>
-        <h2>J&F國際責任有限公司</h2>
+        <h2><a href="home-zh">J&F國際責任有限公司</a></h2>
     </div>
     <div class='nav' id="lang">
         <li><a href="/"><img src="img/english.png" alt="en-flag" class="lang-logo" id="en-logo">英文</a></li>
@@ -61,7 +61,7 @@
     <div class="footer">
         <h3>地址</h3>
         <p>
-            地址: 越南平陽省<br>土龍木市復興坊<br>大登工業區C2-18號
+            越南平陽省<br>土龍木市復興坊<br>大登工業區C2-18號
         </p>
     </div>
 
