--- a/src/main/resources/templates/products-zh/drivein-zh.html
+++ b/src/main/resources/templates/products-zh/drivein-zh.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack, sản phẩm,
 xuyên suốt, drive-in" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/logo.png" />
     <link th:replace="fragments/fragment-zh :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
