--- a/src/main/resources/templates/products/shuttle.html
+++ b/src/main/resources/templates/products/shuttle.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="J&F, jfrack, J&F Industries International Co., Ltd, Racking Systems,
   Warehouse Racking Systems, Shuttle" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/img/logo.png" />
     <link th:replace="fragments/fragment-en :: style-css">
     <link rel="stylesheet" th:href="@{/css/products.css}">
