--- a/src/main/resources/templates/zh/index-zh.html
+++ b/src/main/resources/templates/zh/index-zh.html
@@ -2,9 +2,9 @@
 <html lang="zh-Hant-TW">
 <head>
 <title>首頁</title>
-  <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack" />
+  <meta name="keywords" content="J&F, 倉儲架, 貨架, 料架, jfrack, 首頁,J&F國際責任有限公司,能律 " />
   <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
-<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/img/logo.png" />
   <link th:replace="fragments/fragment-zh :: style-css">
 <link rel="stylesheet" th:href="@{/css/website.css}">
