--- a/src/main/resources/templates/fragments/fragment-en.html
+++ b/src/main/resources/templates/fragments/fragment-en.html
@@ -35,8 +35,8 @@
                     <li><a href="asrs">AS/RS Racking Systems</a></li>
                     <li><a href="cantilever">Cantilever Racking Systems</a></li>
                     <li><a href="mobile">Mobile Racking Systems</a></li>
-                    <li><a href="mezzanine">Mezzanine</a></li>
-                    <li><a href="platform">Platform</a></li>
+                    <li><a href="mezzanine">Mezzanine Racking Systems</a></li>
+                    <li><a href="platform">Platform Racking Systems</a></li>
                     <li><a href="boltless">Boltless Angle Racking Systems</a></li>
                     <li><a href="mobileshelving">Mobile Shelving Systems</a></li>
                 </ul>
