--- a/src/main/resources/templates/fragments/fragment-vn.html
+++ b/src/main/resources/templates/fragments/fragment-vn.html
@@ -34,10 +34,10 @@
                     <li><a href="asrs-vn">Kệ trữ hàng dạng lưu trữ và truy hồi tự động</a></li>
                     <li><a href="cantilever-vn">Kệ trữ hàng dạng khuỷu tay</a></li>
                     <li><a href="mobile-vn">Kệ trữ hàng dạng di động</a></li>
-                    <li><a href="mezzanine-vn">Kệ trữ hàng dạng nhiều tầng</a></li>
-                    <li><a href="platform-vn">Kệ sàn</a></li>
+                    <li><a href="mezzanine-vn">Kệ sàn Mezzanine</a></li>
+                    <li><a href="platform-vn">Kệ trữ hàng dạng nhiều tầng</a></li>
                     <li><a href="boltless-vn">Kệ trữ hàng dạng không bu lông</a></li>
-                    <li><a href="mobileshelving-vn">Tủ di động</a></li>
+                    <li><a href="mobileshelving-vn">Tủ hồ sơ di động</a></li>
                 </ul>
             </li>
             <li><a href="contact-vn">Liên hệ</a></li>
