--- a/src/main/resources/templates/products-vn/platform-vn.html
+++ b/src/main/resources/templates/products-vn/platform-vn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kệ sàn</title>
+    <title>Kệ trữ hàng dạng nhiều tầng</title>
     <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack, sản phẩm,
 kệ sàn, platform" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
@@ -15,7 +15,7 @@ kệ sàn, platform" />
 <link th:replace="fragments/fragment-vn :: header">
 
 <div class="wrapper">
-    <h1>Kệ sàn</h1>
+    <h1>Kệ trữ hàng dạng nhiều tầng</h1>
 
     <div class="img-area">
         <div class="single-img"><img src="img/platform/platform.JPG" alt=""></div>
