--- a/src/main/resources/templates/vn/products-vn.html
+++ b/src/main/resources/templates/vn/products-vn.html
@@ -44,16 +44,16 @@
         <button id="item_mobile">Kệ trữ hàng dạng di động</button>
       </a><br>
       <a href="mezzanine-vn">
-        <button id="item_mezzanine">Kệ trữ hàng dạng nhiều tầng</button>
+        <button id="item_mezzanine">Kệ sàn Mezzanine</button>
       </a><br>
       <a href="platform-vn">
-        <button id="item_platform">Kệ sàn</button>
+        <button id="item_platform">Kệ trữ hàng dạng nhiều tầng</button>
       </a><br>
       <a href="boltless-vn">
         <button id="item_boltless">Kệ trữ hàng dạng không bu lông</button>
       </a><br>
       <a href="mobileshelving-vn">
-        <button id="item_mobileshelving">Tủ di động</button>
+        <button id="item_mobileshelving">Tủ hồ sơ di động</button>
       </a><br>
       </ul>
   </div>
