--- a/src/main/resources/templates/en/products-en.html
+++ b/src/main/resources/templates/en/products-en.html
@@ -45,10 +45,10 @@
         <button id="item_mobile">Mobile Racking Systems</button>
       </a><br>
       <a href="mezzanine">
-        <button id="item_mezzanine">Mezzanine</button>
+        <button id="item_mezzanine">Mezzanine Racking Systems</button>
       </a><br>
       <a href="platform">
-        <button id="item_platform">Platform</button>
+        <button id="item_platform">Platform Racking Systems</button>
       </a><br>
       <a href="boltless">
         <button id="item_boltless">Boltless Angle Racking Systems</button>
