--- a/src/main/resources/templates/products-vn/mobileshelving-vn.html
+++ b/src/main/resources/templates/products-vn/mobileshelving-vn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tủ di động</title>
+    <title>Tủ hồ sơ di động</title>
     <meta name="keywords" content="J&F, Công ty TNHH Quốc tế J&F, kệ trữ hàng, kệ kho, kệ, jfrack, sản phẩm,
 tủ di động, mobile shelving" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
@@ -15,7 +15,7 @@ tủ di động, mobile shelving" />
 <link th:replace="fragments/fragment-vn :: header">
 
 <div class="wrapper">
-    <h1>Tủ di động</h1>
+    <h1>Tủ hồ sơ di động</h1>
 
     <div class="img-area">
         <div class="single-img"><img src="img/mobileshelving/mobileshelving.JPG" alt=""></div>
