--- a/src/main/resources/templates/products/platform.html
+++ b/src/main/resources/templates/products/platform.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Platform</title>
+    <title>Platform Racking Systems</title>
     <meta name="keywords" content="J&F, jfrack, J&F Industries International Co., Ltd, Racking Systems,
   Warehouse Racking Systems, Platform" />
     <meta name="google-site-verification" content="aiIYGhlKi_JA__hyi8PJDbxeVGZ_3epNaTAe8jdTOVo" />
@@ -15,7 +15,7 @@
 <link th:replace="fragments/fragment-en :: header">
 
 <div class="wrapper">
-    <h1>Platform</h1>
+    <h1>Platform Racking Systems</h1>
 
     <div class="img-area">
         <div class="single-img"><img src="img/platform/platform.JPG" alt=""></div>
