--- a/src/main/resources/templates/vn/contact-vn.html
+++ b/src/main/resources/templates/vn/contact-vn.html
@@ -28,7 +28,7 @@
     <button type="submit" class="btn">Liên hệ</button><br><br>
   </form>
 
-  <div>
+  <div class="contactDetails">
     <h2>Thông tin liên hệ</h2><br><br>
       <h3>CÔNG TY TNHH QUỐC TẾ J&F</h3><br><br>
     <h3>Địa chỉ</h3>
