--- a/src/main/resources/templates/zh/contact-zh.html
+++ b/src/main/resources/templates/zh/contact-zh.html
@@ -28,7 +28,7 @@
     <button type="submit" class="btn">送出</button><br><br>
   </form>
 
-  <div>
+  <div class="contactDetails">
     <h2>聯繫方式</h2><br><br>
       <h3>J&F國際責任有限公司</h3><br><br>
     <h3>地址</h3>
