--- a/src/main/resources/static/css/website.css
+++ b/src/main/resources/static/css/website.css
@@ -68,7 +68,6 @@ a:link, a:visited{
     justify-content: space-around;
     color: black;
     height: 100%;
-    /*min-height: 387px;*/
     background-attachment: fixed;
     background-position: center;
     background-image: url("../img/home.JPG");
@@ -115,8 +114,6 @@ iframe{
   display: flex;
   height: 400px;
   width: 100%;
-  /*flex-flow: wrap;*/
-  /*justify-content: space-around;*/
 }
 
 #company li{
@@ -131,7 +128,8 @@ iframe{
 
 #contForm input{
   border-radius: 8px;
-  width: 400px;
+  /*width: 400px;*/
+  width: 100%;
   height: 30px;
   border-color: black;
   border-width: medium;
@@ -140,9 +138,28 @@ iframe{
 #contForm textarea{
   border-radius: 8px;
   border-color: black;
-  width: 400px;
+  /*width: 400px;*/
+  width: 100%;
   height: 100px;
   border-width: medium;
+}
+
+@media only screen and (max-width: 600px) {
+  .contact{
+    width: 100%;
+  }
+  .contactDetails{
+    padding-left: 15px;
+  }
+}
+@media only screen and (min-width: 601px) and (max-width: 768px){
+  .contact{
+    width: 100%;
+  }
+  .contactDetails{
+    padding-left: 15px;
+  }
+
 }
 
 ::placeholder{
@@ -184,8 +201,6 @@ iframe{
   display: flex;
   flex-direction:column;
   width: auto;
-  /*width: 500px;*/
-  /*height: 150px;*/
   height: auto;
   align-self: center;
   text-align: center;
