--- a/src/main/resources/templates/en/contact-en.html
+++ b/src/main/resources/templates/en/contact-en.html
@@ -29,11 +29,11 @@
     <button type="submit" class="btn">Send</button><br><br>
   </form>
 
-  <div>
+  <div class="contactDetails">
     <h2>Contact Details</h2><br><br>
       <h3>J&F Industries International Co., Ltd</h3><br><br>
     <h3>Address</h3>
-      <p>C2-18, Da Den Industrial Zone, Thu Dau Mot City, <br>Binh Duong Province, Viet Nam</p><br>
+      <p>C2-18, Da Den Industrial Zone, Phu Tan Ward, <br>Thu Dau Mot City, Binh Duong Province, Viet Nam</p><br>
     <h3>Contact Us</h3>
       <p>Tel: +84-274-3624200</p>
       <p>Mr. Liu: +84-946-766866</p>
